--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "andcom.nvchart"
-        minSdkVersion 21
+        minSdkVersion 24
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -47,6 +47,10 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.24.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.koushikdutta.async:androidasync:2.+'
+    implementation 'com.github.f0ris.sweetalert:library:1.5.6'
+
+    implementation 'com.github.GrenderG:Toasty:1.4.1'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
