--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.koushikdutta.async:androidasync:2.+'
     implementation 'com.github.f0ris.sweetalert:library:1.5.6'
-
+    implementation 'com.github.jrvansuita:PickImage:+'
     implementation 'com.github.GrenderG:Toasty:1.4.1'
 
     testImplementation 'junit:junit:4.12'
