--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
-        ndk{
+        ndk {
             abiFilters "armeabi", "armeabi-v7a", "x86"
         }
     }
@@ -51,6 +51,7 @@ dependencies {
     implementation 'com.github.jrvansuita:PickImage:+'
     implementation 'com.github.GrenderG:Toasty:1.4.1'
 
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
